tests/ui/for-loop-while/dont-suggest-break-from-unbreakable-loops.stderr
error[E0308]: mismatched types
  --> $DIR/dont-suggest-break-from-unbreakable-loops.rs:9:9
   |
LL |         returns_i32()
   |         ^^^^^^^^^^^^^ expected `()`, found `i32`
   |
help: consider using a semicolon here
   |
LL |         returns_i32();
   |                      +
help: you might have meant to break the loop with this value
   |
LL |         break returns_i32();
   |         +++++              +

error[E0308]: mismatched types
  --> $DIR/dont-suggest-break-from-unbreakable-loops.rs:17:9
   |
LL |         returns_i32()
   |         ^^^^^^^^^^^^^- help: consider using a semicolon here: `;`
   |         |
   |         expected `()`, found `i32`

error[E0308]: mismatched types
  --> $DIR/dont-suggest-break-from-unbreakable-loops.rs:25:9
   |
LL |         returns_i32()
   |         ^^^^^^^^^^^^^- help: consider using a semicolon here: `;`
   |         |
   |         expected `()`, found `i32`

error[E0308]: mismatched types
  --> $DIR/dont-suggest-break-from-unbreakable-loops.rs:33:13
   |
LL |             returns_i32()
   |             ^^^^^^^^^^^^^- help: consider using a semicolon here: `;`
   |             |
   |             expected `()`, found `i32`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
